# fractol

./: .gitmodules  CMakeLists.txt  Makefile  button_binds.c  buttons.c  colors.c  complex.c  escape_button.c  events.c  fractals.c  fractol  fractol.h  image_constructor.c  main.c  tags  window.c
fractol.dSYM/Contents/Resources/DWARF/: fractol
