cmake_minimum_required(VERSION 3.17)
project(fractol C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(lib)
include_directories(minilibx_macos)

add_executable(fractol
        lib/ft_atoi.c
        lib/ft_backwardsmemcpy.c
        lib/ft_bzero.c
        lib/ft_countwords.c
        lib/ft_deldel.c
        lib/ft_isalnum.c
        lib/ft_isalpha.c
        lib/ft_isascii.c
        lib/ft_isdigit.c
        lib/ft_islowercase.c
        lib/ft_isprint.c
        lib/ft_isspace.c
        lib/ft_isupper.c
        lib/ft_itoa.c
        lib/ft_itoa_base.c
        lib/ft_lstadd.c
        lib/ft_lstdel.c
        lib/ft_lstdelone.c
        lib/ft_lstiter.c
        lib/ft_lstmap.c
        lib/ft_lstnew.c
        lib/ft_memalloc.c
        lib/ft_memccpy.c
        lib/ft_memchr.c
        lib/ft_memcmp.c
        lib/ft_memcpy.c
        lib/ft_memdel.c
        lib/ft_memmove.c
        lib/ft_memset.c
        lib/ft_putchar.c
        lib/ft_putchar_fd.c
        lib/ft_putendl.c
        lib/ft_putendl_fd.c
        lib/ft_putnbr.c
        lib/ft_putnbr_fd.c
        lib/ft_putstr.c
        lib/ft_putstr_fd.c
        lib/ft_putunbr.c
        lib/ft_putunbr_fd.c
        lib/ft_strcat.c
        lib/ft_strchr.c
        lib/ft_strclr.c
        lib/ft_strcmp.c
        lib/ft_strcpy.c
        lib/ft_strdel.c
        lib/ft_strdup.c
        lib/ft_strequ.c
        lib/ft_striter.c
        lib/ft_striteri.c
        lib/ft_strjoin.c
        lib/ft_strlcat.c
        lib/ft_strlen.c
        lib/ft_strmap.c
        lib/ft_strmapi.c
        lib/ft_strncat.c
        lib/ft_strncmp.c
        lib/ft_strncpy.c
        lib/ft_strnequ.c
        lib/ft_strnew.c
        lib/ft_strnstr.c
        lib/ft_strrchr.c
        lib/ft_strsplit.c
        lib/ft_strstr.c
        lib/ft_strsub.c
        lib/ft_strtrim.c
        lib/ft_strzeros.c
        lib/ft_tolower.c
        lib/ft_toupper.c
        lib/ft_writenbr.c
        lib/get_next_line.c
        lib/get_next_line.h
        lib/libft.h
        minilibx_macos/font.c
        minilibx_macos/mlx.h
        minilibx_macos/mlx_init_loop.m
        minilibx_macos/mlx_int.h
        minilibx_macos/mlx_int_str_to_wordtab.c
        minilibx_macos/mlx_new_image.m
        minilibx_macos/mlx_new_window.h
        minilibx_macos/mlx_new_window.m
        minilibx_macos/mlx_rgb.c
        minilibx_macos/mlx_shaders.c
        minilibx_macos/mlx_xpm.c
        button_binds.c
        buttons.c
        escape_button.c
        fractol.h
        image_constructor.c
        main.c
        window.c)
